Changes to make code more readable and a bit cleaner