@@ -1,7 +1,6 @@
 package com.twoday.wms.warehouse.warehouse;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Component;
@@ -24,7 +23,8 @@ public class WarehouseConverterImpl implements WarehouseConverter {
         WarehouseDto warehouseDto = new WarehouseDto();
         BeanUtils.copyProperties(warehouse, warehouseDto);
 
-        List<Long> productIds = warehouse.getProducts().stream()
+        List<Long> productIds = warehouse.getProducts()
+                .stream()
                 .map(Product::getId)
                 .toList();
         warehouseDto.setProductIds(productIds);
@@ -41,7 +41,7 @@ public class WarehouseConverterImpl implements WarehouseConverter {
             List<Product> productReferences = warehouseDto.getProductIds()
                     .stream()
                     .map(id -> entityManager.getReference(Product.class, id))
-                    .collect(Collectors.toList());
+                    .toList();
             warehouse.setProducts(productReferences);
         }
 
